# PDF-Scanner

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  REFACTORING_SUMMARY.md  constraints.txt  demo_normalize.py  example.py  pyproject.toml  quickstart.sh  requirements-dev.txt  requirements-streamlit.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: README.md  cloud.yaml  local.yaml  offline.yaml
docs/: ARCHITECTURE.md  EXTRACTION_NORMALIZATION.md  OCR_IMPLEMENTATION.md  README.md  TROUBLESHOOTING.md
src/: __init__.py  extract.py  normalize.py  pdf_text_extractor.py
src/pdf_context_narrator/: __init__.py  __main__.py  chunking.py  cli.py  config.py  embeddings.py  index.py  logger.py  ocr.py  processor.py  search.py
streamlit_app/: README.md  app.py
tests/: __init__.py  test_chunking.py  test_cli.py  test_config.py  test_e2e.py  test_embeddings.py  test_extract.py  test_index.py  test_logger.py  test_normalize.py  test_ocr.py  test_pdf_text_extractor.py  test_processor.py  test_search.py
tests/fixtures/: doc1.txt  doc2.txt  doc3.txt  parts_invoice.txt
